unpackaged/main/default/objects/Booth_Upload_API_Staging__c/Booth_Upload_API_Staging__c.object-meta.xml
<CustomObject>
    <label>Booth Upload API Staging</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Booth Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMEA Booth API Staging items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>