unpackaged/main/default/objects/Booth_Upload_API_Staging__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address 1</label>
    <length>155</length>
    <required>true</required>
    <type>Text</type>
</CustomField>