unpackaged/main/default/objects/Booth_Upload_API_Staging__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <label>Address 2</label>
    <length>155</length>
    <type>Text</type>
</CustomField>