unpackaged/main/default/objects/Booth_Upload_API_Staging__c/fields/Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>Agency_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>