unpackaged/main/default/objects/Booth_Upload_API_Staging__c/fields/Agency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agency_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>