unpackaged/main/default/objects/Booth_Upload_API_Staging__c/fields/Booth_Upload_API__c.field-meta.xml
<CustomField>
    <fullName>Booth_Upload_API__c</fullName>
    <label>Booth Upload API</label>
    <referenceTo>Booth_API_Upload__c</referenceTo>
    <relationshipLabel>EMEA Booth API Staging items</relationshipLabel>
    <relationshipName>EMEA_Booth_API_Staging_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>