unpackaged/main/default/objects/Booth_Upload_API_Staging__c/fields/Booth_Width__c.field-meta.xml
<CustomField>
    <fullName>Booth_Width__c</fullName>
    <label>Booth Width</label>
    <length>15</length>
    <type>Text</type>
</CustomField>