unpackaged/main/default/objects/Booth_Upload_API_Staging__c/fields/Open_Sides__c.field-meta.xml
<CustomField>
    <fullName>Open_Sides__c</fullName>
    <label>Open Sides</label>
    <length>10</length>
    <type>Text</type>
</CustomField>