unpackaged/main/default/objects/Booth_Upload_API_Staging__c/fields/Stand_Number__c.field-meta.xml
<CustomField>
    <fullName>Stand_Number__c</fullName>
    <label>Stand Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>