unpackaged/main/default/objects/Booth_Upload_API_Staging__c/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <label>Town</label>
    <length>50</length>
    <type>Text</type>
</CustomField>